@@ -6,9 +6,14 @@ MAINTAINER muran001 <macmuran001@gmail.com>
 ENV DEBIAN_FRONTEND noninteractive
 
 # Install dependencies
-RUN apt-get update && \
-    apt-get install -yq lib32stdc++6 libstdc++6 lib32z1 libz1 zlib1g libncurses5  --no-install-recommends && \
-    apt-get clean
+#RUN apt-get update && \
+#    apt-get install -yq lib32stdc++6 libstdc++6 lib32z1 libz1 zlib1g libncurses5  --no-install-recommends && \
+#    apt-get clean
+RUN dpkg --add-architecture i386
+RUN apt-get update
+RUN apt-get -yq install libncurses5:i386 libstdc++6:i386 zlib1g:i386
+RUN apt-get -yq install vim
+RUN apt-get clean
 
 # Download and untar SDK
 ENV ANDROID_SDK_URL http://dl.google.com/android/android-sdk_r24.2-linux.tgz
@@ -19,12 +24,12 @@ ENV PATH ${ANDROID_HOME}/tools:$ANDROID_HOME/platform-tools:$PATH
 ENV ADB_INSTALL_TIMEOUT 8
 
 # Install Android SDK components
-ENV ANDROID_SDK_COMPONENTS platform-tools,build-tools-22.0.1,android-22,extra-android-m2repository,extra-google-m2repository,sys-img-armeabi-v7a-android-22,extra-android-support,
+ENV ANDROID_SDK_COMPONENTS platform-tools,build-tools-22.0.1,android-22,extra-android-m2repository,extra-google-m2repository,sys-img-armeabi-v7a-android-22,extra-android-support
 RUN echo y | android update sdk --no-ui --all --filter "${ANDROID_SDK_COMPONENTS}"
 
 # Support Gradle
 ENV TERM dumb
-ENV JAVA_OPTS -Xmx2048m -XX:MaxPermSize=1024m
+ENV JAVA_OPTS -Xmx2048m
 
 ENV PROJECT /project
 
@@ -41,4 +46,5 @@ RUN echo "sdk.dir=$ANDROID_HOME" > local.properties
 RUN ./gradlew --stacktrace androidDependencies
 
 RUN echo n | android create avd --force -n test-emulator -t android-22
+ 
 
